--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 server.port=8082
+spring.application.name=mediscreen-record
+patient.serviceUrl=http://localhost:${server.port}
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.uri=mongodb://root:root@127.0.0.1:27017/patientrecord?authSource=admin&serverTimezone=UTC
 spring.data.mongodb.auto-index-creation=true
+
+logging.level.com.lime=Debug
+logging.pattern.console=%d{yyyy-MM-dd} [%thread] %-5level %logger{50} - %msg%n
