--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8082
 spring.application.name=mediscreen-record
 patient.serviceUrl=http://localhost:${server.port}
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.uri=mongodb://root:root@127.0.0.1:27017/patientrecord?authSource=admin&serverTimezone=UTC
+#spring.data.mongodb.uri=mongodb://root:root@127.0.0.1:27017/patientrecord?authSource=admin
+spring.data.mongodb.uri=mongodb://${MONGO_INITDB_ROOT_USERNAME:root}:${MONGO_INITDB_ROOT_PASSWORD:root}@${MONGO_HOST:127.0.0.1}:${MONGO_PORT:27017}/patientrecord?authSource=admin
 spring.data.mongodb.auto-index-creation=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 logging.level.com.lime=Debug
